--- a/staging/components/homepage-primary-footer.html
+++ b/staging/components/homepage-primary-footer.html
@@ -1,39 +1,60 @@
 <div id="primary-footer" class="primary-footer container">
-    <div id="primary-footer-row" class="row">
-        <div id="county-address-container" class="county-address-container col-md-6 col-sm-6">
-            <img width="80" height="99" rolloverenabled="No" seid="718FDD02919EF51CA99BE2371B48F652" src="/sebin/l/y/footer-map.jpg" class="county-map" alt="Baltimore County, Maryland" />
-            <div id="county-address" class="county-address">
-                <p>Historic Courthouse<br>
-                400 Washington Avenue<br>
-                Towson, MD 21204</p>
-                <p><a title="Get directions to Baltimore County." showtoolbar="No" newwindow="No" linktype="EXTERNAL" href="http://mapq.st/rqwGxR">Directions &amp;gt;&amp;gt;</a></p>
-            </div>
-        </div>
-        <div id="help-container" class="county-help col-md-2 col-sm-6">
-            <h2>Help</h2>
-            <ul class="county-help-list">
-                <li class="county-help-list-item"><a title="Find helpful telephone numbers." href="http://www.baltimorecountymd.gov/Contact_Us/telephone/helpful_numbers.html" seid="223460" showtoolbar="No" newwindow="No" linktype="SE">Phone Numbers</a></li>
-                <li class="county-help-list-item"><a title="Find a County service." href="http://www.baltimorecountymd.gov/imlooking/" seid="89A9FBFDEDF48B6F9B35EAA94A749C0A" showtoolbar="No" newwindow="No" linktype="SE">Find a County Service</a></li>
-                <li class="county-help-list-item"><a title="Report a problem." href="http://www.baltimorecountymd.gov/iwant/" seid="10ECC7D0A9D0930A675C82C24906412F" showtoolbar="No" newwindow="No" linktype="SE">Report a Problem</a></li>
-            </ul>
-        </div>
-        <div id="tranlate-container" class="tranlate-page col-md-2 hidden-sm hidden-xs">
-            <h2>Translate</h2>
-            <ul class="translate-page-list">
-                <li class="translate-page-list-item translate-page-list-item-american"><a title="Read this site in English." href="http://baltimorecountymd.gov/" externallink="http://baltimorecountymd.gov/" showtoolbar="No" newwindow="No" class="american" linktype="EXTERNAL">English</a></li>
-                <li class="translate-page-list-item translate-page-list-item-arabic"><a title="Read this site in Arabic." href="http://translate.google.com/translate?hl=en&amp;sl=en&amp;tl=ar&amp;u=http%3A%2F%2Fwww.baltimorecountymd.gov/%2F" externallink="http://translate.google.com/translate?hl=en&amp;sl=en&amp;tl=ar&amp;u=http%3A%2F%2Fwww.baltimorecountymd.gov/%2F" showtoolbar="No" newwindow="No" class="arabic" linktype="EXTERNAL">Arabic</a></li>
-                <li class="translate-page-list-item translate-page-list-item-chinese"><a title="Read this site in Chinese." href="http://translate.google.com/translate?hl=en&amp;sl=en&amp;tl=zh-CN&amp;u=http%3A%2F%2Fwww.baltimorecountymd.gov/%2F" externallink="http://translate.google.com/translate?hl=en&amp;sl=en&amp;tl=zh-CN&amp;u=http%3A%2F%2Fwww.baltimorecountymd.gov/%2F" showtoolbar="No" newwindow="No" class="chinese" linktype="EXTERNAL">Chinese</a></li>
-                <li class="translate-page-list-item translate-page-list-item-french"><a title="Read this site in French." href="http://translate.google.com/translate?hl=en&amp;sl=en&amp;tl=fr&amp;u=http%3A%2F%2Fwww.baltimorecountymd.gov/%2F" externallink="http://translate.google.com/translate?hl=en&amp;sl=en&amp;tl=fr&amp;u=http%3A%2F%2Fwww.baltimorecountymd.gov/%2F" showtoolbar="No" newwindow="No" class="french" linktype="EXTERNAL">French</a></li>
-                <li class="translate-page-list-item translate-page-list-item-russian"><a title="Read this site in Russian." href="http://translate.google.com/translate?hl=en&amp;sl=en&amp;tl=ru&amp;u=http%3A%2F%2Fwww.baltimorecountymd.gov/%2F" externallink="http://translate.google.com/translate?hl=en&amp;sl=en&amp;tl=ru&amp;u=http%3A%2F%2Fwww.baltimorecountymd.gov/%2F" showtoolbar="No" newwindow="No" class="russian" linktype="EXTERNAL">Russian</a></li>
-                <li class="translate-page-list-item translate-page-list-item-spanish"><a title="Read this site in Spanish." href="http://translate.google.com/translate?hl=en&amp;sl=en&amp;tl=es&amp;u=http%3A%2F%2Fwww.baltimorecountymd.gov/%2F" externallink="http://translate.google.com/translate?hl=en&amp;sl=en&amp;tl=es&amp;u=http%3A%2F%2Fwww.baltimorecountymd.gov/%2F" showtoolbar="No" newwindow="No" class="spanish" linktype="EXTERNAL">Spanish</a></li>
-            </ul>
-        </div>
-        <div id="awards-container" class="county-awards col-md-2 hidden-sm hidden-xs">
-            <h2>Awards</h2>
-            <ul>
-                <li class="county-awards-list"><a title="Learn more about Baltimore County's Best of The Web Award." href="http://www.govtech.com/dc/digital-counties/?year=2014" externallink="http://www.govtech.com/dc/digital-counties/?year=2014" showtoolbar="No" newwindow="No" linktype="EXTERNAL"><img width="110" vspace="0" hspace="0" height="65" rolloverenabled="No" alt="Image of Digital Counties Survey logo." src="/sebin/n/b/footer-map-digital-counties.jpg" seid="33C067299551BE8C6123116FFA15EF2C" /></a></li>
-                <li><a title="Learn more about Baltimore County's Best of The Web Award." href="http://www.govtech.com//internet/2014-Best-of-the-Web-Award-Winners-Announced.html?page=2" externallink="http://www.govtech.com//internet/2014-Best-of-the-Web-Award-Winners-Announced.html?page=2" showtoolbar="No" newwindow="No" linktype="EXTERNAL"><img width="110" vspace="0" hspace="0" height="53" rolloverenabled="No" alt="Image of Best of The Web logo." src="/sebin/l/i/footer-map-botw.jpg" seid="5DA01ACF3686032C89E3B9187D48D6E7" /></a></li>
-            </ul>
-        </div>
-    </div>
+<div id="primary-footer-row" class="row">
+<div id="county-address-container" class="county-address-container col-md-6 col-sm-6 col-xs-12"><img width="80" vspace="0" hspace="0" height="99" rolloverenabled="No" class="county-map hidden-sm hidden-xs" alt="Baltimore County, Maryland" src="/sebin/l/y/footer-map.jpg" seid="718FDD02919EF51CA99BE2371B48F652" />
+<div id="county-address" class="county-address">
+<h2>Baltimore County Government</h2>
+<p>Historic Courthouse<br />
+400 Washington Avenue<br />
+Towson, MD 21204</p>
+<p><a title="Get directions to Baltimore County." href="http://mapq.st/rqwGxR" externallink="http://mapq.st/rqwGxR" showtoolbar="No" newwindow="No" linktype="EXTERNAL">Directions &gt;&gt;</a></p>
+</div>
+</div>
+<div id="help-container" class="county-help col-md-2 col-sm-6 col-xs-12">
+<h2>Help</h2>
+<ul class="county-help-list">
+    <li class="county-help-list-item"><a title="Find helpful telephone numbers." href="http://www.baltimorecountymd.gov/Contact_Us/telephone/helpful_numbers.html" seid="223460" showtoolbar="No" newwindow="No" linktype="SE">Phone Numbers</a></li>
+    <li class="county-help-list-item"><a title="Find a County service." href="http://www.baltimorecountymd.gov/imlooking/" seid="89A9FBFDEDF48B6F9B35EAA94A749C0A" showtoolbar="No" newwindow="No" linktype="SE">Find a County Service</a></li>
+    <li class="county-help-list-item"><a title="Report a problem." href="http://www.baltimorecountymd.gov/iwant/" seid="10ECC7D0A9D0930A675C82C24906412F" showtoolbar="No" newwindow="No" linktype="SE">Report a Problem</a></li>
+</ul>
+</div>
+<div id="tranlate-container" class="tranlate-page col-md-2 hidden-sm hidden-xs">
+<h2>Translate</h2>
+<ul class="translate-page-list">
+    <li class="translate-page-list-item translate-page-list-item-american"><a title="Read this site in English." href="http://baltimorecountymd.gov/" externallink="http://baltimorecountymd.gov/" showtoolbar="No" newwindow="No" class="american" linktype="EXTERNAL">English</a></li>
+    <li class="translate-page-list-item translate-page-list-item-arabic"><a title="Read this site in Arabic." href="http://translate.google.com/translate?hl=en&amp;sl=en&amp;tl=ar&amp;u=http%3A%2F%2Fwww.baltimorecountymd.gov/%2F" externallink="http://translate.google.com/translate?hl=en&amp;sl=en&amp;tl=ar&amp;u=http%3A%2F%2Fwww.baltimorecountymd.gov/%2F" showtoolbar="No" newwindow="No" class="arabic" linktype="EXTERNAL">Arabic</a></li>
+    <li class="translate-page-list-item translate-page-list-item-chinese"><a title="Read this site in Chinese." href="http://translate.google.com/translate?hl=en&amp;sl=en&amp;tl=zh-CN&amp;u=http%3A%2F%2Fwww.baltimorecountymd.gov/%2F" externallink="http://translate.google.com/translate?hl=en&amp;sl=en&amp;tl=zh-CN&amp;u=http%3A%2F%2Fwww.baltimorecountymd.gov/%2F" showtoolbar="No" newwindow="No" class="chinese" linktype="EXTERNAL">Chinese</a></li>
+    <li class="translate-page-list-item translate-page-list-item-french"><a title="Read this site in French." href="http://translate.google.com/translate?hl=en&amp;sl=en&amp;tl=fr&amp;u=http%3A%2F%2Fwww.baltimorecountymd.gov/%2F" externallink="http://translate.google.com/translate?hl=en&amp;sl=en&amp;tl=fr&amp;u=http%3A%2F%2Fwww.baltimorecountymd.gov/%2F" showtoolbar="No" newwindow="No" class="french" linktype="EXTERNAL">French</a></li>
+    <li class="translate-page-list-item translate-page-list-item-russian"><a title="Read this site in Russian." href="http://translate.google.com/translate?hl=en&amp;sl=en&amp;tl=ru&amp;u=http%3A%2F%2Fwww.baltimorecountymd.gov/%2F" externallink="http://translate.google.com/translate?hl=en&amp;sl=en&amp;tl=ru&amp;u=http%3A%2F%2Fwww.baltimorecountymd.gov/%2F" showtoolbar="No" newwindow="No" class="russian" linktype="EXTERNAL">Russian</a></li>
+    <li class="translate-page-list-item translate-page-list-item-spanish"><a title="Read this site in Spanish." href="http://translate.google.com/translate?hl=en&amp;sl=en&amp;tl=es&amp;u=http%3A%2F%2Fwww.baltimorecountymd.gov/%2F" externallink="http://translate.google.com/translate?hl=en&amp;sl=en&amp;tl=es&amp;u=http%3A%2F%2Fwww.baltimorecountymd.gov/%2F" showtoolbar="No" newwindow="No" class="spanish" linktype="EXTERNAL">Spanish</a></li>
+</ul>
+</div>
+<div id="awards-container" class="county-awards col-md-2 hidden-sm hidden-xs">
+<h2>Awards</h2>
+<ul>
+    <li class="county-awards-list"><a title="Learn more about Baltimore County's Best of The Web Award." href="http://www.govtech.com/dc/digital-counties/?year=2014" externallink="http://www.govtech.com/dc/digital-counties/?year=2014" showtoolbar="No" newwindow="No" linktype="EXTERNAL"><img width="110" vspace="0" hspace="0" height="65" rolloverenabled="No" alt="Image of Digital Counties Survey logo." src="/sebin/n/b/footer-map-digital-counties.jpg" seid="33C067299551BE8C6123116FFA15EF2C" /></a></li>
+    <li><a title="Learn more about Baltimore County's Best of The Web Award." href="http://www.govtech.com//internet/2014-Best-of-the-Web-Award-Winners-Announced.html?page=2" externallink="http://www.govtech.com//internet/2014-Best-of-the-Web-Award-Winners-Announced.html?page=2" showtoolbar="No" newwindow="No" linktype="EXTERNAL"><img width="110" vspace="0" hspace="0" height="53" rolloverenabled="No" alt="Image of Best of The Web logo." src="/sebin/l/i/footer-map-botw.jpg" seid="5DA01ACF3686032C89E3B9187D48D6E7" /></a></li>
+</ul>
+</div>
+</div>
+<div id="footer-social-row" class="row">
+<div id="social-footer-list" class="col-sm-12 hidden-md hidden-lg">
+<table attrs=" " moduleheight="250" modulewidth="590" moduletitle="Object Inclusion" modulename="OBJECTINCLUDE" moduleid="SEMODB0FBDCDE485907E40CFE0BED4D48C3D0" style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE1">
+    <tbody>
+        <tr>
+            <td class="SEModuleOnly">
+            <table cellspacing="0" cellpadding="3" border="1">
+                <tbody>
+                    <tr bgcolor="#CCCCCC">
+                        <td colspan="2"><strong>Object Include Module</strong><br />
+                        Type : HTML File<br />
+                        Object : /sebin/m/e/social-icon-county-list.html</td>
+                    </tr>
+                </tbody>
+            </table>
+            </td>
+        </tr>
+    </tbody>
+</table>
+</div>
+</div>
 </div>
