Adjusted reference to the production image

--- a/assets/stylesheets/modules/_variables.scss
+++ b/assets/stylesheets/modules/_variables.scss
@@ -5,4 +5,4 @@ $headline-font: 'Patua One', sans-serif;
 
 
 /*Images*/
-$little-arrow: "../../assets/img/little-arrow.png";
+$little-arrow: "//baltimorecountymd.gov/sebin/l/t/little-arrow.png";
