--- a/assets/stylesheets/partials/base/_primaryFooter.scss
+++ b/assets/stylesheets/partials/base/_primaryFooter.scss
@@ -1,5 +1,5 @@
 .primary-footer {
-	padding: 20px;
+	padding: 20px 15px;
 
 	h2 {
 		margin: 0;
@@ -7,7 +7,7 @@
 }
 @media only screen and (max-width: 992px) {
 	.primary-footer .social-media-list {
-		padding: 10px 10px 0;
+		padding: 20px 0 0;
 		text-align: left;
 	}
 }
