--- a/assets/stylesheets/inside-template.scss
+++ b/assets/stylesheets/inside-template.scss
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Patua+One);
-@import url(http://fonts.googleapis.com/css?family=Raleway:700);
+@import url(//fonts.googleapis.com/css?family=Patua+One);
+@import url(//fonts.googleapis.com/css?family=Raleway:700);
 
 /*Modules*/
 @import "modules/formReset";
