--- a/assets/stylesheets/partials/base/_typography.scss
+++ b/assets/stylesheets/partials/base/_typography.scss
@@ -1,66 +1,70 @@
-body {
-    font-size: .95em;
-    line-height: 1.5em;
-    color: $dark-gray;
-}
+.homepage {
+    body {
+        font-size: .95em;
+        line-height: 1.5em;
+        color: $dark-gray;
+    }
 
-p {
-    margin: 0 0 20px;
-}
+    p {
+        margin: 0 0 20px;
+    }
 
-small {
-    font-size: 85%;
-}
+    small {
+        font-size: 85%;
+    }
 
 
-h1, h2, h3, h4, h5, h6 {
-    color: $dark-gray;
-    font-weight:normal;
-}
+    h1, h2, h3, h4, h5, h6 {
+        color: $dark-gray;
+        font-weight:normal;
+    }
 
-h1, h2{
-    font-family: $headline-font;   
-}
-h3, h4, h5 {
-    font-weight: bold;
-}
+    h1, h2{
+        font-family: $headline-font;   
+    }
+    h3, h4, h5 {
+        font-weight: bold;
+    }
 
-h1{
-    font-size:2.083em;
-    line-height:40px;
-}
-h2{
-    border-top:5px solid #ebebeb; //TODO: Make a Variable
-    border-bottom:1px solid #ebebeb; //TODO: Make a Variable
-    color: $red;
-    font-size:1.6em;
-    line-height:30px;
-    margin:0 0 13px;
-    padding:7px 0;    
-}
-h3{
-    font-size:1.2em;
-    line-height:30px;
-}
-h4{
-    font-size:1.1em;
-    line-height:20px;
-}
-h5{
-    font-size:1em;
-    line-height:20px;
-}
+    h1{
+        font-size:2.083em;
+        line-height:40px;
+    }
+    h2{
+        border-top:5px solid #ebebeb; //TODO: Make a Variable
+        border-bottom:1px solid #ebebeb; //TODO: Make a Variable
+        color: $red;
+        font-size:1.6em;
+        line-height:30px;
+        margin:0 0 13px;
+        padding:7px 0;    
+    }
+    h3{
+        font-size:1.2em;
+        line-height:30px;
+    }
+    h4{
+        font-size:1.1em;
+        line-height:20px;
+    }
+    h5{
+        font-size:1em;
+        line-height:20px;
+    }
 
-a {
-    color: $navy;
+    a {
+        color: $navy;
 
-    &:hover {
-        color: $gold;
+        &:hover {
+            color: $gold;
+        }
     }
 }
 
 @media only screen and (max-width: 767px) {
-    h2 {
-        margin-bottom: 0;
+    .homepage {
+        h2 {
+            margin-bottom: 0;
+        }
     }
 }
