--- a/staging/components/brand.html
+++ b/staging/components/brand.html
@@ -1,6 +1,6 @@
 <div class="brand">
   <a href="http://www.baltimorecountymd.gov" title="View the Baltimore County Government homepage.">
-	  <img class="brand-logo" src="assets/img/header-county-seal.png" height="84" width="84" />
+	  <img class="brand-logo" src="//baltimorecountymd.gov/sebin/l/e/header-county-seal.png " height="84" width="84" />
 	  <h1 class="brand-heading">Baltimore County<br><span class="uppercase smaller-text">Government</span></h1>
 	</a>
 </div>
