--- a/staging/components/hamburger-menu.html
+++ b/staging/components/hamburger-menu.html
@@ -1,4 +1,4 @@
 <div class="hamburger-nav">
 	<a class="hamburger-btn" href="#" title="Navigate Baltimore County's Website">
-		<img src="assets/img/hamburger.png" height="32" width="32" alt="Navigate Baltimore County's Website" /></a>
+		<img src="//baltimorecountymd.gov/sebin/d/k/hamburger.png" height="32" width="32" alt="Navigate Baltimore County's Website" /></a>
 </div>
