--- a/assets/stylesheets/mobile.css
+++ b/assets/stylesheets/mobile.css
@@ -202,14 +202,14 @@ html {
 
 html, body {
   background: #dbdbdb;
-  color: #444;
+  color: #444444;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   margin: 0;
   padding: 0; }
 
 img {
-  border: 1px solid #ccc;
+  border: 1px solid #cccccc;
   margin: 5px;
   padding: 5px; }
 
@@ -930,13 +930,13 @@ img {
 .homepage body {
   font-size: .95em;
   line-height: 1.5em;
-  color: #444; }
+  color: #444444; }
 .homepage p {
   margin: 0 0 20px; }
 .homepage small {
   font-size: 85%; }
 .homepage h1, .homepage h2, .homepage h3, .homepage h4, .homepage h5, .homepage h6 {
-  color: #444;
+  color: #444444;
   font-weight: normal; }
 .homepage h1, .homepage h2 {
   font-family: "Patua One", sans-serif; }
@@ -976,7 +976,7 @@ img {
   height: 100%; }
 
 .secondary-header {
-  background: #333;
+  background: #333333;
   font-size: .85em;
   padding: 10px 0; }
   .secondary-header a {
@@ -984,7 +984,7 @@ img {
     display: block;
     line-height: 11px; }
     .secondary-header a:hover {
-      color: #fff; }
+      color: white; }
   .secondary-header .page-tools {
     text-align: right; }
     .secondary-header .page-tools a, .secondary-header .page-tools ul {
@@ -1010,7 +1010,7 @@ img {
 
 .primary-nav {
   background: #c51110;
-  color: #fff;
+  color: white;
   float: right;
   list-style-type: none;
   height: 100%;
@@ -1019,7 +1019,7 @@ img {
   width: 100%;
   /*Only needed in Site Executive*/ }
   .primary-nav a {
-    color: #fff; }
+    color: white; }
   .primary-nav .primary-nav-item {
     background-color: #a90f0e;
     border-right: 5px solid #c51110;
@@ -1072,7 +1072,7 @@ img {
   .homepage .primary-nav {
     width: 100%; }
   .homepage .primary-nav .primary-nav-item a {
-    background: url("//baltimorecountymd.gov/sebin/l/t/little-arrow.png") no-repeat scroll 12.5px 22px transparent;
+    background: url("//baltimorecountymd.gov/sebin/l/t/little-arrow.png") no-repeat scroll 12.5px 22px rgba(0, 0, 0, 0);
     padding: 20px 0 20px 40px; }
   .homepage .primary-nav .primary-nav-item {
     margin: 0 0 5px; } }
@@ -1096,7 +1096,7 @@ img {
     .homepage .primary-nav.mobile-menu-visible, .homepage .secondary-nav.mobile-menu-visible {
       display: block; } }
 .secondary-nav {
-  background: #333; }
+  background: #333333; }
   .secondary-nav .secondary-nav-list {
     padding: 8px 0; }
     .secondary-nav .secondary-nav-list .secondary-nav-list-item {
@@ -1127,7 +1127,7 @@ img {
   .brand a, .brand a:hover {
     text-decoration: none; }
   .brand h1 {
-    color: #fff; }
+    color: white; }
   .brand h1, .brand img {
     border: none; }
   .brand .brand-heading {
@@ -1147,14 +1147,14 @@ img {
 @media only screen and (max-width: 480px) {
   .homepage .brand {
     padding: 5px; }
-  .homepage .brand .brand-heading {
-    font-size: 1.2em;
-    line-height: 25px;
-    margin: 10px 0 0; }
-  .homepage .brand .brand-logo {
-    height: 65px;
-    width: 65px;
-    margin-right: 5px; } }
+    .homepage .brand .brand-heading {
+      font-size: 1.4em;
+      line-height: 25px;
+      margin: 10px 0 0; }
+    .homepage .brand .brand-logo {
+      height: 65px;
+      width: 65px;
+      margin-right: 5px; } }
 .primary-footer {
   padding: 20px 15px; }
   .primary-footer h2 {
@@ -1166,12 +1166,12 @@ img {
     text-align: left; } }
 .secondary-footer {
   background: #c51110;
-  color: #fff;
+  color: white;
   padding: 20px; }
   .secondary-footer a {
     color: white; }
   .secondary-footer .county-links-list-item {
-    border-right: 1px solid #fff;
+    border-right: 1px solid white;
     padding: 0 5px; }
     .secondary-footer .county-links-list-item:last-child {
       border-right: none; }
@@ -1211,15 +1211,15 @@ img {
   margin: 15px 15px 0 0; }
 
 .footer {
-  background: #333;
+  background: #333333;
   color: #dbdbdb;
   font-size: .85em; }
   .footer a {
     color: #dbdbdb; }
     .footer a:hover {
-      color: #fff; }
+      color: white; }
   .footer h2 {
-    color: #fff; }
+    color: white; }
   .footer h2, .footer img {
     border: none; }
   .footer ul, .footer ol {
@@ -1244,7 +1244,7 @@ img {
       padding-left: 5px; } }
 /*Components*/
 .secondary-nav {
-  background: #333; }
+  background: #333333; }
   .secondary-nav .secondary-nav-list {
     padding: 8px 0; }
     .secondary-nav .secondary-nav-list .secondary-nav-list-item {
@@ -1351,16 +1351,16 @@ button {
 
 .link-btn {
   background: #feb30c;
-  border: 1px solid #444;
+  border: 1px solid #444444;
   padding: 10px;
-  color: #444;
+  color: #444444;
   text-decoration: none;
   font-weight: 700;
   font-family: Arial;
   font-size: 1.1em; }
   .link-btn:hover {
     background: #fed372;
-    color: #444; }
+    color: #444444; }
 
 .view-full-site-btn {
   padding: 20px 10px; }
@@ -1390,7 +1390,7 @@ a.skip:hover {
   list-style-type: none;
   text-align: center; }
   .social-media-list h1, .social-media-list a {
-    color: #fff; }
+    color: white; }
   .social-media-list li {
     padding-left: 0; }
 
@@ -1544,5 +1544,3 @@ a.skip:hover {
 html, body {
   overflow-x: hidden;
   font-size: .95em; }
-
-/*# sourceMappingURL=mobile.css.map */
