--- a/staging/components/carousel-responsive.html
+++ b/staging/components/carousel-responsive.html
@@ -1,15 +1,21 @@
 <div class="carousel-item">
-	<img class="carousel-image" src="assets/img/carousel-petadoption.jpg"  />
+	<img 
+		srcset="assets/img/carousel-petadoption-small.jpg 200w,
+				assets/img/carousel-petadoption-medium.jpg 500w,
+				assets/img/carousel-petadoption.jpg 1200w"
+		sizes="100%" 
+	    class="carousel-image" 
+	    src="assets/img/carousel-petadoption-small.jpg"  />
 	<div class="carousel-message">
 	  <h2>Adopt a lost or adoptable pet</h2>
 	  <p>Adopt a pet now and you will get another one <a href="#" title="Get a free pet">free</a>.</p>
 	</div>
 </div>
 <div class="carousel-item">
-	<img class="carousel-image" src="assets/img/carousel-walkingtrails.jpg" />
+	<img class="carousel-image" src="assets/img/carousel-snowfighter.jpg" srcset="assets/img/carousel-snowfighter-small.jpg 767w" />
 	<div class="carousel-message">
-	  <h2>Walking Trails and Paths</h2>
-	  <p>Use our <a href="#" title="Follow Snowfighter">online search tool</a> to find walking trails and paths throughout Baltimore County.</p>
+	  <h2>Follow Snowfighter</h2>
+	  <p>For your latest storm updates, <a href="#" title="Follow Snowfighter">follow snowfighter</a>.</p>
 	</div>
 </div>
 <div class="carousel-item">
@@ -20,14 +26,14 @@
 	</div>
 </div>
 <div class="carousel-item">
-	<img class="carousel-image" src="assets/img/carousel-stormwater.jpg" />
+	<img class="carousel-image" src="assets/img/carousel-stormwater.jpg" srcset="assets/img/carousel-stormwater-small.jpg 767w" />
 	<div class="carousel-message">
 	  <h2>Question about Stormwater?</h2>
 	  <p>Find out <a href="#" title="Find out more about walking safe">more information</a> about the baltimore county stormwater tax.</p>
 	</div>
 </div>
 <div class="carousel-item">
-	<img class="carousel-image" src="assets/img/carousel-bigtrees.jpg" />
+	<img class="carousel-image" src="assets/img/carousel-bigtrees.jpg" srcset="assets/img/carousel-snowfighter-small.jpg 767w" />
 	<div class="carousel-message">
 	  <h2>Big Trees Sale</h2>
 	  <p>Purchase trees for planting on private properties. <a href="#" title="Pre-order a big tree.">Pre-order trees</a> online today!</p>
