--- a/staging/components/secondary-nav-list.html
+++ b/staging/components/secondary-nav-list.html
@@ -1,11 +1,11 @@
 <ul class="secondary-nav-list inline-list">
 	<li class="secondary-nav-list-item">
-		<a href="">County Executive</a>
+		<a href="http://www.baltimorecountymd.gov/countyexecutivemega.html" title="Learn more about the County Executive.">County Executive</a>
 	</li>
 	<li class="secondary-nav-list-item">
-		<a href="">County Council</a>
+		<a href="http://www.baltimorecountymd.gov/countycouncilmega.html" title="Learn more about the County Council.">County Council</a>
 	</li>
 	<li class="secondary-nav-list-item">
-		<a href="">Courts</a>
+		<a href="http://www.baltimorecountymd.gov/courtsmega.html" title="Learn more about the County Courts.">Courts</a>
 	</li>
 </ul>
