--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url(//fonts.googleapis.com/css?family=Patua+One);
 @import url(//fonts.googleapis.com/css?family=Lato:700);
 /*Resets*/
@@ -575,14 +574,14 @@ html {
 
 html, body {
   background: #dbdbdb;
-  color: #dbdbdb;
+  color: #444444;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   margin: 0;
   padding: 0; }
 
 img {
-  border: 1px solid #ccc;
+  border: 1px solid #cccccc;
   margin: 5px;
   padding: 5px; }
 
@@ -613,7 +612,7 @@ img {
   .slick-list:focus {
     outline: none; }
   .slick-loading .slick-list {
-    background: #fff url("./ajax-loader.gif") center center no-repeat; }
+    background: white image-url("ajax-loader.gif", false, false) center center no-repeat; }
   .slick-list.dragging {
     cursor: pointer;
     cursor: hand; }
@@ -663,10 +662,11 @@ img {
 /* Icons */
 @font-face {
   font-family: "slick";
-  src: url("./fonts/slick.eot");
-  src: url("./fonts/slick.eot?#iefix") format("embedded-opentype"), url("./fonts/slick.woff") format("woff"), url("./fonts/slick.ttf") format("truetype"), url("./fonts/slick.svg#slick") format("svg");
+  src: font-url("slick.eot");
+  src: font-url("slick.eot?#iefix") format("embedded-opentype"), font-url("slick.woff") format("woff"), font-url("slick.ttf") format("truetype"), font-url("slick.svg#slick") format("svg");
   font-weight: normal;
   font-style: normal; }
+
 /* Arrows */
 .slick-prev,
 .slick-next {
@@ -713,9 +713,9 @@ img {
     left: auto;
     right: -25px; }
   .slick-prev:before {
-    content: "←"; }
+    content: "\2190"; }
     [dir="rtl"] .slick-prev:before {
-      content: "→"; }
+      content: "\2192"; }
 
 .slick-next {
   right: 50px; }
@@ -723,9 +723,9 @@ img {
     left: -25px;
     right: auto; }
   .slick-next:before {
-    content: "→"; }
+    content: "\2192"; }
     [dir="rtl"] .slick-next:before {
-      content: "←"; }
+      content: "\2190"; }
 
 /* Dots */
 .slick-slider {
@@ -767,7 +767,7 @@ img {
         position: absolute;
         top: 0;
         left: 0;
-        content: "•";
+        content: "\2022";
         width: 20px;
         height: 20px;
         font-family: "slick";
@@ -1499,32 +1499,26 @@ img {
 .affix {
   position: fixed; }
 
-body {
+.homepage body, .header body, .footer body {
   font-size: .95em;
   line-height: 1.5em;
-  color: #444; }
-
-p {
-  margin: 0 0 20px; }
-
-small {
+  color: #444444; }
+.homepage p, .header p, .footer p {
+  margin: 0 0 20px;
+  line-height: 24px; }
+.homepage small, .header small, .footer small {
   font-size: 85%; }
-
-h1, h2, h3, h4, h5, h6 {
-  color: #444;
+.homepage h1, .homepage h2, .homepage h3, .homepage h4, .homepage h5, .homepage h6, .header h1, .header h2, .header h3, .header h4, .header h5, .header h6, .footer h1, .footer h2, .footer h3, .footer h4, .footer h5, .footer h6 {
+  color: #444444;
   font-weight: normal; }
-
-h1, h2 {
+.homepage h1, .homepage h2, .header h1, .header h2, .footer h1, .footer h2 {
   font-family: "Patua One", sans-serif; }
-
-h3, h4, h5 {
+.homepage h3, .homepage h4, .homepage h5, .header h3, .header h4, .header h5, .footer h3, .footer h4, .footer h5 {
   font-weight: bold; }
-
-h1 {
+.homepage h1, .header h1, .footer h1 {
   font-size: 2.083em;
   line-height: 40px; }
-
-h2 {
+.homepage h2, .header h2, .footer h2 {
   border-top: 5px solid #ebebeb;
   border-bottom: 1px solid #ebebeb;
   color: #c51110;
@@ -1532,26 +1526,22 @@ h2 {
   line-height: 30px;
   margin: 0 0 13px;
   padding: 7px 0; }
-
-h3 {
+.homepage h3, .header h3, .footer h3 {
   font-size: 1.2em;
   line-height: 30px; }
-
-h4 {
+.homepage h4, .header h4, .footer h4 {
   font-size: 1.1em;
   line-height: 20px; }
-
-h5 {
+.homepage h5, .header h5, .footer h5 {
   font-size: 1em;
   line-height: 20px; }
-
-a {
+.homepage a, .header a, .footer a {
   color: #002280; }
-  a:hover {
+  .homepage a:hover, .header a:hover, .footer a:hover {
     color: #feb30c; }
 
 @media only screen and (max-width: 767px) {
-  h2 {
+  .homepage h2 {
     margin-bottom: 0; } }
 .primary-header {
   background: #c51110;
@@ -1559,7 +1549,7 @@ a {
   height: 100%; }
 
 .secondary-header {
-  background: #333;
+  background: #333333;
   font-size: .85em;
   padding: 10px 0; }
   .secondary-header a {
@@ -1567,7 +1557,7 @@ a {
     display: block;
     line-height: 11px; }
     .secondary-header a:hover {
-      color: #fff; }
+      color: white; }
   .secondary-header .page-tools {
     text-align: right; }
     .secondary-header .page-tools a, .secondary-header .page-tools ul {
@@ -1593,16 +1583,13 @@ a {
 
 .primary-nav {
   background: #c51110;
-  color: #fff;
-  float: right;
+  color: white;
   list-style-type: none;
   height: 100%;
   margin: 0;
-  padding: 0;
-  width: 100%;
-  /*Only needed in Site Executive*/ }
+  padding: 0; }
   .primary-nav a {
-    color: #fff; }
+    color: white; }
   .primary-nav .primary-nav-item {
     background-color: #a90f0e;
     border-right: 5px solid #c51110;
@@ -1655,7 +1642,7 @@ a {
   .homepage .primary-nav {
     width: 100%; }
   .homepage .primary-nav .primary-nav-item a {
-    background: url("//baltimorecountymd.gov/sebin/l/t/little-arrow.png") no-repeat scroll 12.5px 22px transparent;
+    background: url("//baltimorecountymd.gov/sebin/l/t/little-arrow.png") no-repeat scroll 12.5px 22px rgba(0, 0, 0, 0);
     padding: 20px 0 20px 40px; }
   .homepage .primary-nav .primary-nav-item {
     margin: 0 0 5px; } }
@@ -1679,7 +1666,7 @@ a {
     .homepage .primary-nav.mobile-menu-visible, .homepage .secondary-nav.mobile-menu-visible {
       display: block; } }
 .secondary-nav {
-  background: #333; }
+  background: #333333; }
   .secondary-nav .secondary-nav-list {
     padding: 8px 0; }
     .secondary-nav .secondary-nav-list .secondary-nav-list-item {
@@ -1710,7 +1697,7 @@ a {
   .brand a, .brand a:hover {
     text-decoration: none; }
   .brand h1 {
-    color: #fff; }
+    color: white; }
   .brand h1, .brand img {
     border: none; }
   .brand .brand-heading {
@@ -1730,14 +1717,14 @@ a {
 @media only screen and (max-width: 480px) {
   .homepage .brand {
     padding: 5px; }
-  .homepage .brand .brand-heading {
-    font-size: 1.2em;
-    line-height: 25px;
-    margin: 10px 0 0; }
-  .homepage .brand .brand-logo {
-    height: 65px;
-    width: 65px;
-    margin-right: 5px; } }
+    .homepage .brand .brand-heading {
+      font-size: 1.4em;
+      line-height: 25px;
+      margin: 10px 0 0; }
+    .homepage .brand .brand-logo {
+      height: 65px;
+      width: 65px;
+      margin-right: 5px; } }
 .primary-footer {
   padding: 20px 15px; }
   .primary-footer h2 {
@@ -1749,12 +1736,12 @@ a {
     text-align: left; } }
 .secondary-footer {
   background: #c51110;
-  color: #fff;
+  color: white;
   padding: 20px; }
   .secondary-footer a {
     color: white; }
   .secondary-footer .county-links-list-item {
-    border-right: 1px solid #fff;
+    border-right: 1px solid white;
     padding: 0 5px; }
     .secondary-footer .county-links-list-item:last-child {
       border-right: none; }
@@ -1794,15 +1781,16 @@ a {
   margin: 15px 15px 0 0; }
 
 .footer {
-  background: #333;
+  background: #333333;
   color: #dbdbdb;
   font-size: .85em; }
   .footer a {
-    color: #dbdbdb; }
+    color: #dbdbdb;
+    text-decoration: underline; }
     .footer a:hover {
-      color: #fff; }
+      color: white; }
   .footer h2 {
-    color: #fff; }
+    color: white; }
   .footer h2, .footer img {
     border: none; }
   .footer ul, .footer ol {
@@ -1827,7 +1815,7 @@ a {
       padding-left: 5px; } }
 /*Components*/
 .secondary-nav {
-  background: #333; }
+  background: #333333; }
   .secondary-nav .secondary-nav-list {
     padding: 8px 0; }
     .secondary-nav .secondary-nav-list .secondary-nav-list-item {
@@ -1934,16 +1922,16 @@ button {
 
 .link-btn {
   background: #feb30c;
-  border: 1px solid #444;
+  border: 1px solid #444444;
   padding: 10px;
-  color: #444;
+  color: #444444;
   text-decoration: none;
   font-weight: 700;
   font-family: Arial;
   font-size: 1.1em; }
   .link-btn:hover {
     background: #fed372;
-    color: #444; }
+    color: #444444; }
 
 .view-full-site-btn {
   padding: 20px 10px; }
@@ -1973,7 +1961,7 @@ a.skip:hover {
   list-style-type: none;
   text-align: center; }
   .social-media-list h1, .social-media-list a {
-    color: #fff; }
+    color: white; }
   .social-media-list li {
     padding-left: 0; }
 
@@ -2067,7 +2055,7 @@ a.skip:hover {
     margin: 0; }
   .carousel h2 {
     border: none;
-    color: #fff;
+    color: white;
     font-size: 2.3em;
     margin: 10px 0;
     text-transform: uppercase; }
@@ -2080,7 +2068,7 @@ a.skip:hover {
     bottom: 0;
     background-color: #333;
     background: rgba(68, 68, 68, 0.9);
-    color: #fff;
+    color: white;
     padding: 20px 40px;
     width: 100%; }
 
@@ -2130,11 +2118,11 @@ a.skip:hover {
       color: #0033cc; }
   .carousel .carousel-message {
     background: white;
-    color: #444;
+    color: #444444;
     position: relative;
     padding: 20px 20px 0; }
     .carousel .carousel-message h2 {
-      color: #444;
+      color: #444444;
       font-size: 1.5em; } }
 @media only screen and (max-width: 600px) {
   /*Plugin Specific Overrides*/
@@ -2281,7 +2269,7 @@ a.skip:hover {
     width: 100%; }
 
   .top-visited-list li {
-    border-bottom: 1px solid #444;
+    border-bottom: 1px solid #444444;
     border-right: none;
     display: block;
     text-align: left;
@@ -2308,12 +2296,12 @@ a.skip:hover {
   margin: 0 0 5px; }
 .feedItems .title {
   font-family: Patua One;
-  color: #444;
+  color: #444444;
   font-weight: normal;
   font-size: 1.3em;
   margin: 25px 0 0; }
 .feedItems h3 a {
-  color: #444;
+  color: #444444;
   text-decoration: none; }
 .feedItems h3 a:hover {
   text-decoration: none; }
@@ -2394,7 +2382,7 @@ information on the homepage*/
   .elected-officials .county-council {
     padding-right: 15px; } }
 .county-information {
-  background: #fff;
+  background: white;
   padding-bottom: 25px;
   padding-top: 25px; }
   .county-information .county-information-headline {
@@ -2438,5 +2426,3 @@ information on the homepage*/
     padding-right: 15px; } }
 html, body {
   overflow-x: hidden; }
-
-/*# sourceMappingURL=main.css.map */
