--- a/assets/stylesheets/partials/base/_secondaryHeader.scss
+++ b/assets/stylesheets/partials/base/_secondaryHeader.scss
@@ -7,6 +7,7 @@
     color: $light-gray;
     display: block;
     line-height: 11px;
+    text-decoration: underline;
 
     &:hover {
       color: $white;
