--- a/assets/stylesheets/partials/base/_typography.scss
+++ b/assets/stylesheets/partials/base/_typography.scss
@@ -1,4 +1,4 @@
-.homepage {
+.homepage, .header, .footer {
     body {
         font-size: .95em;
         line-height: 1.5em;
@@ -7,6 +7,7 @@
 
     p {
         margin: 0 0 20px;
+        line-height: 24px;
     }
 
     small {
